package com.helioroute.calculation;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class HelioCalculationApplication {

	public static void main(String[] args) {
		SpringApplication.run(HelioCalculationApplication.class, args);
	}

}